@@ -18,7 +18,7 @@ jobs:
         os:
           - macos-12
           - macos-11
-        perl: ['5.34', '5.32', '5.30', '5.28']
+        perl: ['5.36', '5.34', '5.32', '5.30', '5.28', '5.22']
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
