@@ -17,8 +17,8 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04
-          - ubuntu-18.04
-        perl: ['5.34', '5.32', '5.30', '5.28']
+          - ubuntu-22.04
+        perl: ['5.36', '5.34', '5.32', '5.30', '5.28', '5.22']
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
